Add unit tests, update README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(chat)
+project(messenger)
 cmake_minimum_required(VERSION 3.0)
 
 set (BOOST_ROOT ./boost)
@@ -17,11 +17,16 @@ if(Boost_FOUND AND Threads_FOUND)
     message(STATUS "Success!")
     include_directories(${Boost_INCLUDE_DIRS})
 
-    add_executable(server chat_server.cpp chat_server.h chat_message.cpp chat_message.h)
-    add_executable(client chat_client.cpp chat_client.h chat_message.cpp chat_message.h)
+    add_executable(server chat_server.cpp chat_server.h chat_message.cpp  chat_message.h)
+    add_executable(client chat_client.cpp chat_client.h chat_message.cpp  chat_message.h)
 
     target_link_libraries(server pthread)
     target_link_libraries(client pthread)
+
+    # create chat_message library to use it with gtest
+    add_library(messenger chat_message.cpp  chat_message.h)
 else()
     message(STATUS "Fail!")
 endif()
+
+add_subdirectory(messenger_tests)
