--- a/messenger_tests/CMakeLists.txt
+++ b/messenger_tests/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.0)
 add_subdirectory(googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(messenger_tests_run main.cpp chat_message_test.cpp)
+add_executable(messenger_tests_run chat_message_test.cpp)
 
 target_link_libraries(messenger_tests_run messenger)
-target_link_libraries(messenger_tests_run gtest gtest_main gmock gmock_main)
+target_link_libraries(messenger_tests_run gtest gtest_main gmock)
